--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: "Pretendard-Regular";
+  src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
+    format("woff");
+  font-weight: 400;
+  font-style: normal;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -114,6 +122,7 @@ section {
 }
 body {
   line-height: 1;
+  font-family: "Pretendard-Regular";
 }
 ol,
 ul {
@@ -133,4 +142,11 @@ q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+.container {
+  width: 320px;
+  height: 568px;
+  margin: 0 auto;
+  border: 1px solid gray;
 }
